# kaspar_ros

./: .gitignore  LICENSE
src/herkulex/herkulex_controllers/: CMakeLists.txt  package.xml
src/herkulex/herkulex_description/: CMakeLists.txt  package.xml
src/herkulex/herkulex_description/urdf/: drs_x01.xacro  materials.xacro  mount.xacro
src/herkulex/herkulex_driver/: CMakeLists.txt  package.xml
src/herkulex/herkulex_driver/include/: herkulex.h  t_adc.h
src/herkulex/herkulex_driver/include/herkulex_driver/: herkulex.h  t_adc.h
src/herkulex/herkulex_driver/src/: herkulex.cpp  herkulex.t_adc.yaml  herkulex_io.py  herkulex_io_adaptor.py
src/kaspar_control/: CMakeLists.txt  package.xml
src/kaspar_control/config/: kaspar_control.yaml  kaspar_controllers.yaml  kaspar_position_controllers.yaml  kaspar_position_group_controllers.yaml  kaspar_trajectory_controllers.yaml
src/kaspar_control/include/kaspar_control/: joint_limits_rosparam.h  kaspar_hw_interface.h  kaspar_interface.h
src/kaspar_control/launch/: kaspar_control.launch  kaspar_hardware.launch  kaspar_rqt.launch  kaspar_rqt.perspective  kaspar_simulation.launch  kaspar_test_trajectory.launch  kaspar_visualize.launch
src/kaspar_control/src/: kaspar_hw_interface.cpp  kaspar_hw_main.cpp  kaspar_interface.cpp
src/kaspar_description/: CMakeLists.txt  package.xml
src/kaspar_description/launch/: kaspar.rviz  kaspar_rviz.launch
src/kaspar_description/urdf/: kaspar.gazebo  kaspar.xacro  kaspar.xml  kaspar_arm.xacro  kaspar_base.xacro  kaspar_head.xacro  kaspar_mount.xacro  kaspar_torso.xacro  materials.xacro
src/kaspar_gazebo/: CMakeLists.txt  package.xml
src/kaspar_gazebo/launch/: kaspar_world.launch
src/kaspar_gazebo/worlds/: kaspar.world
