<?xml version="1.0"?>
<package>
  <name>kaspar_control</name>
  <version>0.0.1</version>
  <description>Kaspar Robot control package</description>

  <maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>herkulex_driver</build_depend>
  

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>urdf</build_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>herkulex_driver</run_depend>
  <run_depend>serial</run_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>urdf</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
</package>