<?xml version="1.0"?>
<package>
	<name>herkulex_driver</name>
	<version>0.0.1</version>
	<description>Serial driver for herkulex drs-0x01 servos</description>

	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>serial</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>serial</run_depend>

</package>